--- a/Ejercicio03.html
+++ b/Ejercicio03.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ExamenThonny/estilo.css">
+    <title>Document</title>
+   <link rel="stylesheet" href="../ExamenThonny/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <title>Document</title>
+   
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body class="container mt-5">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="../ExamenThonny/index.html">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,7 +32,6 @@
             <li><a class="dropdown-item" href="../ExamenThonny/Ejercio01.html">Ejercicio01</a></li>
             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio02.html">Ejercicio02</a></li>
 
-            <li><a class="dropdown-item" href="/ExamenThonny/Ejercicio03.html">Ejercicio03</a></li>
              <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio04.html">Ejercicio04</a></li>
           </ul>
         </li>
@@ -46,8 +46,29 @@
     </div>
   </div>
 </nav>
-<h1 style="text-align: center; color: rgb(36, 20, 255);">EXAMEN EVALUACION 2 Thonny</h1>
-
     
+  <h2>Calculadora de Préstamo (Interés Simple)</h2>
+
+  <form id="prestamoForm">
+    <div class="mb-3">
+      <label for="monto" class="form-label">Monto del préstamo (S/)</label>
+      <input type="number" class="form-control" id="monto" min="1" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="plazo" class="form-label">Plazo (años)</label>
+      <input type="number" class="form-control" id="plazo" min="1" required>
+    </div>
+
+    <div class="alert alert-info">
+      Tasa de interés anual: <strong>30%</strong>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Calcular</button>
+  </form>
+
+  <div id="resultado" class="mt-4"></div>
+
+  <script src="../ExamenThonny/java3.js"></script>
 </body>
 </html>
