--- a/Ejercicio04.html
+++ b/Ejercicio04.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ExamenThonny/estilo.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <title>Document</title>
+ <link rel="stylesheet" href="../ExamenThonny/estilo.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+   
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+<body class="container mt-5">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="../ExamenThonny/index.html">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +34,7 @@
             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio02.html">Ejercicio02</a></li>
 
             <li><a class="dropdown-item" href="/ExamenThonny/Ejercicio03.html">Ejercicio03</a></li>
-             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio04.html">Ejercicio04</a></li>
+          
           </ul>
         </li>
         <li class="nav-item">
@@ -46,8 +48,31 @@
     </div>
   </div>
 </nav>
-<h1 style="text-align: center; color: rgb(36, 20, 255);">EXAMEN EVALUACION 2 Thonny</h1>
+  <h2>Calculadora de IMC</h2>
+
+  <form id="imcForm">
+    <div class="mb-3">
+      <label for="nombre" class="form-label">Nombres y Apellidos</label>
+      <input type="text" class="form-control" id="nombre" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="peso" class="form-label">Peso (kg)</label>
+      <input type="number" class="form-control" id="peso" min="1" step="0.1" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="altura" class="form-label">Altura (m)</label>
+      <input type="number" class="form-control" id="altura" min="0.1" step="0.01" required>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Calcular IMC</button>
+  </form>
+
+  <div id="resultado" class="mt-4"></div>
+
+  <script src="../ExamenThonny/java4.js"></script>
 
     
-</body>
+  </body>
 </html>
