--- a/Ejercio01.html
+++ b/Ejercio01.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../ExamenThonny/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <title>Document</title>
+   
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="../ExamenThonny/index.html">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,7 +29,7 @@
             Semana 8
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../ExamenThonny/Ejercio01.html">Ejercicio01</a></li>
+       
             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio02.html">Ejercicio02</a></li>
 
             <li><a class="dropdown-item" href="/ExamenThonny/Ejercicio03.html">Ejercicio03</a></li>
@@ -46,8 +47,41 @@
     </div>
   </div>
 </nav>
-<h1 style="text-align: center; color: rgb(36, 20, 255);">EXAMEN EVALUACION 2 Thonny</h1>
+     <div class="container shadow p-4 bg-white rounded">
+    <h2 class="text-center mb-4">Calculadora de Sueldo Neto</h2>
 
-    
+    <form id="formulario">
+      <div class="mb-3">
+        <label for="dni" class="form-label" class="texto-borde-blanco">DNI</label>
+        <input type="text" id="dni" class="form-control" maxlength="8" required />
+      </div>
+
+      <div class="mb-3">
+        <label for="nombre" class="form-label" class="text color black">Nombre</label>
+        <input type="text" id="nombre" class="form-control" required />
+      </div>
+
+      <div class="mb-3">
+        <label for="cargo" class="form-label">Cargo</label>
+        <select id="cargo" class="form-select" required>
+          <option value="">Seleccione un cargo</option>
+          <option value="1200">Sistemas - S/ 2000</option>
+          <option value="1500">Eléctrico - S/ 1500</option>
+          <option value="1500">Civil - S/ 1800</option>
+          <option value="1500">Administrador - S/ 1900</option>
+        </select>
+      </div>
+
+      <div class="alert alert-info">
+        El descuento total (AFP 14% + Salud 9%) es: <strong>23%</strong>
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100">Calcular Sueldo Neto</button>
+    </form>
+
+    <div class="mt-4" id="resultado"></div>
+  </div>
+
+<script src="/ExamenThonny/java.js"></script>
 </body>
 </html>
