--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             Semana 8
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../ExamenThonny/Ejercio01.html">Ejercicio01</a></li>
-            <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio02.html">Ejercicio02</a></li>
+            <li><a class="dropdown-item" href="/Ejercio01.html">Ejercicio01</a></li>
+            <li><a class="dropdown-item" href="/Ejercicio02.html">Ejercicio02</a></li>
 
-            <li><a class="dropdown-item" href="/ExamenThonny/Ejercicio03.html">Ejercicio03</a></li>
-             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio04.html">Ejercicio04</a></li>
+            <li><a class="dropdown-item" href="/Ejercicio03.html">Ejercicio03</a></li>
+             <li><a class="dropdown-item" href="/Ejercicio04.html">Ejercicio04</a></li>
           </ul>
         </li>
         <li class="nav-item">
