--- a/Ejercicio02.html
+++ b/Ejercicio02.html
@@ -11,7 +11,7 @@
 <body class="container mt-5" style="background-image: url('https://cdn.pixabay.com/photo/2019/03/12/17/18/trees-4051288_1280.jpg'); ">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../ExamenThonny/index.html">Inicio</a>
+    <a class="navbar-brand" href="/index.html">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,11 +28,11 @@
             Semana 8
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../ExamenThonny/Ejercio01.html">Ejercicio01</a></li>
-          
+         
+            <li><a class="dropdown-item" href="/Ejercicio02.html">Ejercicio02</a></li>
 
-            <li><a class="dropdown-item" href="/ExamenThonny/Ejercicio03.html">Ejercicio03</a></li>
-             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio04.html">Ejercicio04</a></li>
+            <li><a class="dropdown-item" href="/Ejercicio03.html">Ejercicio03</a></li>
+             <li><a class="dropdown-item" href="/Ejercicio04.html">Ejercicio04</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -76,6 +76,6 @@
 
     <div id="resultado" class="mt-4"></div>
 
-    <script src="/ExamenThonny/java2.js"></script>
+    <script src="/Ejercicio02.html"></script>
 </body>
 </html>
