--- a/Ejercio01.html
+++ b/Ejercio01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../ExamenThonny/estilo.css">
+    <link rel="stylesheet" href="/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
    
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../ExamenThonny/index.html">Inicio</a>
+     <a class="navbar-brand" href="/index.html">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,10 +30,11 @@
           </a>
           <ul class="dropdown-menu">
        
-            <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio02.html">Ejercicio02</a></li>
+            
+            <li><a class="dropdown-item" href="/Ejercicio02.html">Ejercicio02</a></li>
 
-            <li><a class="dropdown-item" href="/ExamenThonny/Ejercicio03.html">Ejercicio03</a></li>
-             <li><a class="dropdown-item" href="../ExamenThonny/Ejercicio04.html">Ejercicio04</a></li>
+            <li><a class="dropdown-item" href="/Ejercicio03.html">Ejercicio03</a></li>
+             <li><a class="dropdown-item" href="/Ejercicio04.html">Ejercicio04</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -82,6 +83,6 @@
     <div class="mt-4" id="resultado"></div>
   </div>
 
-<script src="/ExamenThonny/java.js"></script>
+<script src="/java.js"></script>
 </body>
 </html>
