--- a/Ejercicio02.html
+++ b/Ejercicio02.html
@@ -76,6 +76,6 @@
 
     <div id="resultado" class="mt-4"></div>
 
-    <script src="/Ejercicio02.html"></script>
+    <script src="/java2.js"></script>
 </body>
 </html>
